plplot (5.0.1-0.potato.4) unstable; urgency=low

  * debian/rules: Excluding examples/ dir from list of compressible files
    by dh_compress.
  * debian/control: Build-depends on iTcl.  This will make the plplot-tcl
    package [incr Tcl]-able.  This is needed to run the tk/tk01 and
    tk/tk04 examples (thanks to Alan Irwin <irwin@beluga.phys.uvic.ca> for
    pointing this out).
  * examples/c/plcdemos.h: Removed #definition of PL_DOUBLE, as it is
    already done by plConfig.h.

 -- Rafael Laboissiere <rafael@icp.inpg.fr>  Thu, 15 Feb 2001 11:01:52 +0100

plplot (5.0.1-0.potato.3) unstable; urgency=low

  * debian/control: Make plplot-common conflict with older version of
    plplot.  This makes a smooth upgrade.

 -- Rafael Laboissiere <rafael@icp.inpg.fr>  Tue, 13 Feb 2001 12:53:09 +0100

plplot (5.0.1-0.potato.2) unstable; urgency=low

  * debian/control: Better descriptions for plplot-c++ and plplot-common
    (thanks to Alan Irwin <irwin@beluga.phys.uvic.ca>).  Added "Replaces:"
    fields to plplot-xwin and plplot-tcl.  The dependencies now are
    simplified thanks to the use of a virtual package plplot-lib.
  * debian/plplot-doc.files: Removed file.
  * debian/plplot-dev.files: Addded usr/include.  This will put the header
    files into plplot-dev (thanks again to Alan).
  * Created new package plplot-bin with pltek, plpr and plm2gif, which
    were before in plplot-common.  This was causing circular dependency
    problems. 
  * debian/plplot-common.files: Get some files that were wrongly going
    into the "empty" package plplot.

 -- Rafael Laboissiere <rafael@icp.inpg.fr>  Tue, 13 Feb 2001 12:21:20 +0100

plplot (5.0.1-0.potato.1) unstable; urgency=low

  * New upstream release.  Starting with version 5.0.0, PLplot entered a
    new development phase.  The project is now hosted at SourceForge
    (http://plplot.sourceforge.net) and the current Debian maintainer is
    also involved with upstream development.  