@@ -64,6 +64,9 @@ install-stamp: build-stamp
 
 	dh_installmanpages --package=plplot
 	dh_movefiles --package=python-plplot
+# Make x16.py non-executable.  Temporary hack.
+	chmod -x \
+	  $(debbase)/python-plplot/usr/share/doc/plplot/examples/python/x16.py
 
 	touch install-stamp	
 
@@ -93,6 +96,7 @@ binary-arch: build install
 	dh_installdirs -a
 	rm -f $(deblib)/libplcxxd.{so.5.*,so.5}
 	mv $(debbase)/libplcxxd.{so.5.*,so.5} $(deblib)
+
 	dh_movefiles -a
 # Why do not dh_movefiles remove empty dirs? Grumpf...
 	( cd $(debusr) ; \
@@ -108,7 +112,11 @@ binary-arch: build install
 	dh_suidregister -a
 	dh_makeshlibs -a
 	dh_installdeb -a
-	dh_shlibdeps -a 
+	dh_shlibdeps -a
+	for i in xwin tcl ; do \
+	  dh_shlibdeps --package=plplot-$$i \
+                       -l$(debbase)/plplot-$$i/usr/lib ; \
+	done
 	dh_gencontrol -a
 	dh_md5sums -a
 	dh_builddeb -a
